<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="11">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_weight="3"
        android:src="@drawable/supermed_logo"
        tools:ignore="Suspicious0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.4"
        android:gravity="center"
        android:text="Email"
        android:textColor="#5D910B"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:background="@drawable/et_bg"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.4"
        android:gravity="center"
        android:text="Password"
        android:textColor="#5D910B"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:background="@drawable/et_bg"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:background="@drawable/buttonbg"
        android:fontFamily="@font/lato_bold"
        android:text="@string/loginBtn"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/login_tv_forgot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.5"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@color/green" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/lato_regular"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:background="@color/green" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/login_google"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@color/google_btn"
            android:drawableLeft="@drawable/google"
            android:fontFamily="@font/lato_bold"
            android:paddingLeft="25dp"
            android:paddingRight="35dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_facebook"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@color/facebook_btn"
            android:drawableLeft="@drawable/facebook"
            android:fontFamily="@font/lato_bold"
            android:paddingLeft="32dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/btn_create_account"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.5"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/guest_user"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/btn_guest_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.5"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/create_account"
        android:textSize="18sp" />

</LinearLayout>
