<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="managment.protege.supermed.Fragment.ChangePassword">

    <!-- TODO: Update blank fragment layout -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/oldpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_bg"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/oldpassword"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/changePasswordTextColor"
            android:textColorHint="@color/changePasswordTextColor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/newpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_bg"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/newpassword"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/changePasswordTextColor"
            android:textColorHint="@color/changePasswordTextColor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/confirm_newpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/change_password_bg"
            android:fontFamily="@font/lato_bold"
            android:hint="@string/confirmnewpassword"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/changePasswordTextColor"
            android:textColorHint="@color/changePasswordTextColor"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_changepassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonbg"
            android:fontFamily="@font/lato_bold"
            android:text="CHANGE PASSWORD"
            android:textColor="@color/white"
            android:textSize="14dp" />

    </LinearLayout>
</LinearLayout>
